Fixed word-break/word-wrap. Now it only breaks when a word is longer than 1 line

--- a/normalStyle.css
+++ b/normalStyle.css
@@ -84,5 +84,5 @@ h1 {
   margin-top: 30px;
   padding: 0px 10px;
   word-wrap: break-word;
-  word-break: break-all;
+  word-break: break-word;
 }
